feature: builder name

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: smartlistview
+name: smart_listview_builder
 description: Smart listview
 version: 0.0.1
 homepage: https://landamessenger.com/
